# loopharness

./: .gitignore  CHANGELOG.md  CLAUDE.md  EXTENDED_DATA.md  HN_POST_DRAFT.md  KNOWN_ISSUES.md  LICENSE  MORNING_REPORT_V3.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  install.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
.harness/: change_request.md  proposed_auto.md  retreat_log.md  review_report.md  spec.md  test_ac_cost_telemetry.py  test_ac_docs.py  test_ac_fresh_review.py  test_ac_loop_guardrails.py  test_ac_retreat_log.py  test_ac_review_consensus.py  test_ac_start_guard.py  test_growth_batch_a.py  test_growth_docs_config_gate.py  test_growth_review_safety.py  test_loop_eng2.py  test_public_release_v14.py
.harness/archive_loop_eng2/: test_ac_zhuolong_loop.py
claude_hh/: __init__.py  antagonist.py  antagonist_cli.py  delivery.py  hermes_loader.py  hermes_propose.py  pipeline.py
claude_hh/tests/: test_delivery.py  test_delivery_hardening.py  test_pipeline_document_changes.py  test_v103.py  test_v104.py  test_v106.py
examples/: sample_spec.md
hermes/: implicit_expectations.md
hooks/: pre_edit.py  stop_check.py
knowledge/: antagonist_issues.md
prompts/: 01_spec.md  02_implement.md  03_review.md  04_test.md  06_external_test.md  antagonist.md
