[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-hh"
version = "1.0.0"
description = "Spec-first pipeline for Claude Code. 300 lines, A/B-tested."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
harness = "claude_hh.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_hh*"]
