[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-hh"
version = "1.1.0"
description = "Spec-first pipeline for Claude Code with G4 cross-family audit. 300 lines core + ~1500 lines for the optional G4 gate."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.scripts]
harness = "claude_hh.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_hh*"]
